frontend/OfficialWebsite/official-website/src/components/Carousel/Carousel.css
@import "slick-carousel/slick/slick.css";
@import "slick-carousel/slick/slick-theme.css";

*{
    box-sizing: border-box;
}
.App {
    margin:0 auto 0 auto;
    background-color: blanchedalmond;
    padding:auto;
    font-size: 24;
    overflow: hidden;
}

.headerWrapper{
    display:flex;
    flex-wrap: wrap;
}
.header{
    flex:1; 
    text-align:center; 
    padding:"10px"
}
.carouselWrapper{
    display:flex;
    padding:5px; /* for shadow of the car */
    position: relative; /* for position the arrow */
    max-height: 100%;
}

.slide img{
    width: 100%;
    height:auto;
    border-radius: inherit;
}
.disc{
    margin:auto;
    border-radius: inherit;
    background-color: rgba(0, 0, 0, 0.2);
    text-align: center;
    padding:50% 0;
}

.slide {
    background-color: white;
    min-width: 50%;
    padding: 10px;

    border-radius: 10px;
    border: solid 0.5px;
    height: inherit;
    box-shadow: 3px 2px 2px 1px rgba(0, 0, 0, 0.4);
    transition: all 2s;

}

.activeSlide {
    z-index: 1;
    transform: scale(1);
}
.arrowWrapper{
    display: inline-block;
    padding:2px;
    background-color: rgba(0, 0, 0, 0.3);
    transition: background-color 1s ;
}
.arrowWrapper:hover{
    display: inline-block;
    padding:2px;
    background-color: rgba(0, 0, 0, 0.8);
    color:white
}
.arrow {
    border: solid black;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 5px;
    transition: border 1s ;
}
.arrow:hover {
    /* border: solid white; */
    border-width: 0 3px 3px 0;
}

.right {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
}

.left {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}
.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    z-index: 100;
    padding: 16px;
    margin-top: -40px;
    color:  rgba(0, 0, 0, 0.5);
    font-weight: bold;
    font-size: 40px;
    transition: all 0.6s ease;
    border-radius: 10%;
}
.next {
    right: 0;
}
.prev:hover, .next:hover {
    background-color: rgb(65, 65, 65, 0.7);
    color:  rgb(221, 221, 221);
}
.prev:active, .next:active {
    background-color: rgb(65, 65, 65, 0.7);
    color: white;
}
@media screen and (min-width:769px){
    .App{
        width: 70%;
        height: 100%;
    }
}

